# kg-microbe

./: .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  CHEBI_NAME_NORMALIZATION_ANALYSIS.md  CHEBI_SEARCH_FINDINGS.md  CHEBI_SYNONYM_INTEGRATION_SUMMARY.md  CHEMICAL_MAPPING_MIGRATION_SUMMARY.md  CLAUDE.md  COLUMN_REMOVAL_ANALYSIS.md  Dockerfile  FINAL_HARDCODED_MAPPINGS_STATUS.md  GTDB_TRANSFORM_QC_REPORT.md  HARDCODED_MAPPINGS_AUDIT_FINAL.md  HARDCODED_MAPPINGS_ELIMINATED.md  Jenkinsfile  MAPPING_AUDIT_REPORT.md  MIGRATION_VERIFICATION.md  Makefile  OPTIONS_A_B_IMPLEMENTATION_SUMMARY.md  PHASE2_MIGRATION_COMPLETE.md  PRIORITY2_IMPLEMENTATION_COMPLETE.md  PROVENANCE_WORK_SUMMARY.md  README.md  README.rst  ROUND2_IMPLEMENTATION_SUMMARY.md  ROUND3_IMPLEMENTATION_SUMMARY.md  SECURITY.md  UNMAPPED_TRAITS_FINAL_ANALYSIS.md  UNMAPPED_TRAITS_FINAL_SUMMARY.md  UNMAPPED_TRAITS_QUICK_WINS.md  UNMAPPED_TRAITS_ROUND2_ANALYSIS.md  check_bacdive_enzymes_no_ec.py  check_transform_chars.py  create_1hop_full_labels.py  create_2hop_full_labels.py  create_full_label_visualizations.py  download.yaml  download_gtdb.yaml  genindex.html  (+36 more)
.github/: dependabot.yml
TODO/: 2026-04-28_codex_adversarial_review_metpo_children.md
_sources/: index.rst.txt
bacdive_api/: README.md  bacdive-api.Makefile  bacdive-collaboration-strategy.md  download_bacdive_subset.py
docs/: .buildinfo  202512_BRANCH_MODELING_SUMMARY.md  202512_REFACTORING_LIST.md  ASSAY_CURRENT_STATE_ANALYSIS.md  ASSAY_DUAL_EDGE_DESIGN.md  ASSAY_EDGE_TYPES.md  ASSAY_IMPLEMENTATION_SUMMARY.md  ASSAY_NODE_MODELING.md  ASSAY_RELEASES_COMPARISON.md  BACDIVE_EMPTY_RELATIONS_FIX.md  BIOLINK_PREDICATE_CHANGES.md  CHEMICAL_MIXTURE_ANALYSIS.md  CHEMICAL_SUBSTANCE_CONSOLIDATION.md  COPILOT_COMMENTS_RESOLUTION.md  COPILOT_REVIEW_ANALYSIS.md  GTDB_ACCESSION_MAPPING_FIX.md  GTDB_METATRAITS_ANALYSIS.md  KGX_CATEGORY_INVESTIGATION.md  KGX_LIST_FORMAT_INVESTIGATION.md  MAPPING_AUDIT.md  METATRAITS_TRANSFORM_ANALYSIS.md  METATRAITS_TRANSFORM_RUNBOOK.md  METPO_NEW_TERMS_PROPOSAL.md  METPO_PREDICATES.md  METPO_PREDICATE_BASED_IMPLEMENTATION.md  METPO_PRIORITIZATION_SUMMARY.md  METPO_PROPOSALS_SUMMARY.md  MISSING_CHEBI_ENTRIES.md  NAMEDTHING_ANALYSIS.md  RO_RELATIONS.md  SCHEMA_COMPLIANCE_ANALYSIS.md  SYNONYM_VS_SAMEAS.md  TOX_GUIDE.md  UNMAPPED_TRAITS_ONTOLOGY_ANALYSIS.md  _config.yml  conf.py  genindex.html  index.html  index.md  kg_microbe.html  (+15 more)
hpc/: kg_microbe_train_binary_medium.sl  run_kg_transform.sl  run_kg_transform_uniprot.sl  run_kg_transform_uniref.sl  run_parallel_transform.slurm
kg-microbe/: __version__.py  transform.py
kg_microbe/: __init__.py  __version__.py  bactotraits_to_mongo.py  create_feat_ec.sql  download.py  query.py  run.py  sanitize_curies.py  transform.py
mappings/: CONSOLIDATION_SUMMARY.md  CUSTOM_MAPPINGS_ANALYSIS.md  METPO_TERM_REQUESTS.md  README.md  add_kgm_secondary_metabolites.py  bacdive_pathogenicity_to_metpo.tsv  bacdive_phenotype_routing.tsv  chemical_mappings.tsv  chemical_mappings_mismatches.tsv  culturebotai_reviewed_ingredients.tsv  fix_metatraits_special_contamination.py  fix_special_chemical_contamination.py  fix_unified_chemical_remaining.py  ingredient_mappings.sssom.tsv  isolation_source_to_ontology.tsv  kgmicrobe_proposal_placeholders.tsv  manual_mapping_audit_report.tsv  metpo_existing_aliases.tsv  metpo_label_corrections.tsv  metpo_phases_1_2_3_terms.tsv  metpo_phases_1_and_4_terms.tsv  metpo_predicate_based_proposal.tsv  metpo_proposal_categorical.tsv  metpo_proposal_classes_robot.tsv  metpo_proposal_properties_robot.tsv  metpo_proposal_quantitative.tsv  metpo_unified_all_phases.tsv  unmapped_ingredients_analysis.txt  unmapped_mediadive_ingredients.tsv  unmapped_mediadive_ingredients_fixed.tsv  validate_isolation_source_mappings.py  validate_manual_mappings.py  validate_mapping_schema.py
metanetx_uniprot/: README.md  _parsers.py  build.py  build_taxa_ids.py  chebi_utils.py  chemical_utils.py  combine_rels.py  create_labels_file.py  enzyme_utils.py  go_utils.py  index.py  init.cql  kegg_utils.py  mnxref_utils.py  namespace_utils.py  ncbi_taxonomy_utils.py  reaction_utils.py  rhea_utils.py  seq_utils.py  spectra_utils.py  utils.py
neo4j/: create_1hop_subgraph.py
notebooks/: BacDive-exploration.ipynb  Edge_prediction_perceptron.ipynb  MergedKG_exploration.ipynb  README.md  Uniprot_API_test.ipynb  bacdive-api-summary-table.ipynb  bacdive-api-test.ipynb  bacdive-process-errors-with-genus.ipynb  bacdive-summary-counts.ipynb  bacdive_mapping_resource.ipynb  bacdive_reformat.ipynb  cluster_ingredients.ipynb  (+20 more)
(+821 files in other folders)
