[tool.poetry]
name = "kg-microbe"
version = "1.1.0"
description = "KG-Hub tool to produce a knowledge graph for microbial traits."
authors = ["Harshad Hegde <hhegde@lbl.gov>, caufieldjh <j.harry.caufield@gmail.com>, marcin p. joachimiak <>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "kg_microbe"}]

[tool.poetry.dependencies]
python = "^3.8"
greenlet = "!=2.0.2"
json-flattener = "^0.1.9"
rdflib-pyld-compat = "^0.1.0"
PyLD = "^2.0.3"
jsonasobj2 = "^1.0.4"
rdflib = "^6.2.0"
tqdm = "^4.64.1"
wget = "^3.2"
compress-json = "^1.0.8"
click = "^8.1.3"
PyYAML = "^6.0"
kgx = "^1.7.2"
parameterized = "^0.8.1"
pandas = "^1.5.2"
oger = "^1.5"
kghub-downloader = "^0.3.3"
networkx = "^2.8.8"
sphinx = {version = "5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.1.1", extras = ["docs"]}
sphinx-click = {version = "^4.4.0", extras = ["docs"]}
recommonmark = {version = "^0.7.1", extras = ["docs"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.0"
parameterized = "^0.8.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-click", "recommonmark"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
